# Rag_youtuber_Chatbot_mohammmad_hassan

./: .gitignore  README.md  api.py  explorations.ipynb  function_app.py  ingestion.py  ingestions.py  pyproject.toml  requirements.txt
backend/: Rag_youtuber_Chatbot_mohammmad_hassan.code-workspace  constants.py  data_models.py  rag.py
frontend/: app.py  test_app.py
knowledge_base/articles.lance/_transactions/: 0-1b28401f-1c6b-440d-9c42-3bb3714d0c7d.txn  0-78e99f65-9476-45f8-85ba-b958be14f5df.txn  0-dc7d6bff-22f0-4731-8c94-df47b50ca6c7.txn  1-08cc9def-9750-4923-93e5-8d3d02836a65.txn  1-17785db9-50e2-4470-a07b-d82e5d0718b2.txn  1-dd88efb5-e0b6-45eb-adc8-47735387a17b.txn  10-811062f0-856a-4492-aff9-6eee572f2ce3.txn  10-bea1c92f-2581-46ca-abb0-17a8589525e6.txn  10-fd2fc205-9586-4bfe-a650-38cbeda7638f.txn  11-3ef8cdf3-c6e0-48c3-a397-69c977e8e393.txn  11-55517587-bb51-4eef-939a-090643952626.txn  11-a53ae07a-22aa-4afe-a5b9-b4c5518ff41b.txn  12-0c024c7c-52ad-445d-9e83-4a30ef036121.txn  12-197aa017-b44d-401a-8ca3-7dd087c39197.txn  12-653fa3b6-a1f8-4800-bd86-b9654018f0ef.txn  13-4c7a8105-7abb-4e28-b6a4-c0897fa7e8c7.txn  13-9fb1d9f4-d52f-4507-9033-1abef54e21ed.txn  13-c9b39781-52b5-408a-add2-73f169e60f66.txn  14-9017bac1-846e-4afb-a096-ec7b503b7698.txn  14-d62610d1-6411-422c-9afa-5ce78a4b3f4e.txn  14-f74dc566-e5e7-45b9-b70b-c1b2878d18bc.txn  15-2472bbd8-7dd5-4ab7-80b1-5d8fe6b68bbc.txn  15-64cfcd53-6962-4ac0-8a7e-a61721c81eb1.txn  15-8c69b811-3d8d-41b6-8dd4-064c4a2bb75c.txn  16-13239eb1-4524-467c-913a-511383688c39.txn  16-87213f25-3af5-40c0-b98e-08eec62c6703.txn  (+259 more)
